[feature/bug] add docker support, add autorefresh to index.

--- a/ZavenDotNetInterview.App/Web.Release.config
+++ b/ZavenDotNetInterview.App/Web.Release.config
@@ -14,6 +14,9 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="ZavenDotNetInterview" connectionString="Server=127.0.0.1,15433;Database=ZavenDotNetInterview;User=sa;Password=Pass@word" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
