--- a/ZavenDotNetInterview.App/Web.Debug.config
+++ b/ZavenDotNetInterview.App/Web.Debug.config
@@ -14,6 +14,9 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="ZavenDotNetInterview" connectionString="Server=127.0.0.1,15433;Database=ZavenDotNetInterview;User=sa;Password=Pass@word" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
