--- a/ZavenDotNetInterview.App/Web.config
+++ b/ZavenDotNetInterview.App/Web.config
@@ -11,7 +11,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="ZavenDotNetInterview" connectionString="data source=DESKTOP-MQ0KC6D\SQLEXPRESS;initial catalog=ZavenDotNetInterview;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ZavenDotNetInterview" connectionString="Server=127.0.0.1,15433;Database=ZavenDotNetInterview;User=sa;Password=Pass@word" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
