[4] Add LastUpdatedAt to model and to update state job.

--- a/ZavenDotNetInterview.Persistence/ZavenDotNetInterview.Persistence.csproj
+++ b/ZavenDotNetInterview.Persistence/ZavenDotNetInterview.Persistence.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202004151433004_init.designer.cs">
       <DependentUpon>202004151433004_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004151439102_addLastUpdatedAt.cs" />
+    <Compile Include="Migrations\202004151439102_addLastUpdatedAt.designer.cs">
+      <DependentUpon>202004151439102_addLastUpdatedAt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -84,6 +88,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004151433004_init.resx">
       <DependentUpon>202004151433004_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004151439102_addLastUpdatedAt.resx">
+      <DependentUpon>202004151439102_addLastUpdatedAt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
