--- a/ZavenDotNetInterview.App/packages.config
+++ b/ZavenDotNetInterview.App/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.4.1" targetFramework="net461" />
   <package id="Dapper" version="2.0.30" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
