--- a/ZavenDotNetInterview.Core/ZavenDotNetInterview.Core.csproj
+++ b/ZavenDotNetInterview.Core/ZavenDotNetInterview.Core.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\JobStatus.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IJobsRepository.cs" />
